PR/44113: Nicolas Joly: printf(3) should ignore zero padding for nan/inf