lib/libc/stdio/vfwprintf.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: vfwprintf.c,v 1.21 2010/07/31 08:47:34 tnozaki Exp $	*/
+/*	$NetBSD: vfwprintf.c,v 1.22 2010/11/19 00:44:18 christos Exp $	*/
 
 /*-
  * Copyright (c) 1990, 1993
@@ -38,7 +38,7 @@
 static char sccsid[] = "@(#)vfprintf.c	8.1 (Berkeley) 6/4/93";
 __FBSDID("$FreeBSD: src/lib/libc/stdio/vfwprintf.c,v 1.27 2007/01/09 00:28:08 imp Exp $");
 #else
-__RCSID("$NetBSD: vfwprintf.c,v 1.21 2010/07/31 08:47:34 tnozaki Exp $");
+__RCSID("$NetBSD: vfwprintf.c,v 1.22 2010/11/19 00:44:18 christos Exp $");
 #endif
 #endif /* LIBC_SCCS and not lint */
 
@@ -1131,6 +1131,7 @@ fp_common:
 					result = (ch >= 'a') ? STRCONST("inf") :
 					    STRCONST("INF");
 				size = 3;
+				flags &= ~ZEROPAD;
 				break;
 			}
 #else
@@ -1161,6 +1162,7 @@ fp_common:
 				else
 					result = STRCONST("inf");
 				size = 3;
+				flags &= ~ZEROPAD;
 				break;
 			}
 			if (isnan(_double)) {
@@ -1169,6 +1171,7 @@ fp_common:
 				else
 					result = STRCONST("nan");
 				size = 3;
+				flags &= ~ZEROPAD;
 				break;
 			}
 
